# mullvad-wireguard

./: README.md  mullvad.py  pyproject.toml
src/: mullvad.py
